[gd_scene load_steps=14 format=3 uid="uid://67f70nsheois"]

[ext_resource type="Script" uid="uid://dulnk2vc83x6w" path="res://Data/Characters/enemy.gd" id="1_wr5no"]
[ext_resource type="Texture2D" uid="uid://buy4pq4wyk53y" path="res://Data/Characters/EnemySpriteSheet.png" id="2_ki8fj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wr5no"]
atlas = ExtResource("2_ki8fj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki8fj"]
atlas = ExtResource("2_ki8fj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogkm5"]
atlas = ExtResource("2_ki8fj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjo7v"]
atlas = ExtResource("2_ki8fj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5885"]
atlas = ExtResource("2_ki8fj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb400"]
atlas = ExtResource("2_ki8fj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ogkm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr5no")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki8fj")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogkm5")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjo7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5885")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb400")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wr5no"]
radius = 5.0990195

[sub_resource type="CircleShape2D" id="CircleShape2D_ki8fj"]
radius = 38.052597

[sub_resource type="CircleShape2D" id="CircleShape2D_tjo7v"]
radius = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr5no"]
bg_color = Color(1, 0.33801875, 0.3195942, 1)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_wr5no")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["projectile"]]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_ogkm5")
autoplay = "default"
frame_progress = 0.76106995

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wr5no")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="StateDebugLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "STATE"

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_ki8fj")

[node name="HitboxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CircleShape2D_tjo7v")
debug_color = Color(0.9604842, 0, 0.51849055, 0.41960785)

[node name="HPBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 5)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_wr5no")
show_percentage = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
